Change MLflow run to use local env manager
Updated MLflow run command to use local environment manager.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         
     - name: Run MLflow Project
       # Ini perintah inti: Jalankan folder MLProject
-      run: mlflow run . --no-conda 
+      run: mlflow run . --env-manager=local 
       # Catatan: Kita pakai --no-conda di CI sederhana agar lebih cepat (pakai pip di atas), 
       # tapi struktur file tetap memenuhi syarat MLflow Project.
 
